# ocaml-nix-updater

./: .gitignore  README.md  dune  dune-project  flake.nix  ocaml_nix_updater.opam  packages_to_update.txt
lib/: dune  git.ml  nixpkgs.ml  opam.ml  package_data.ml  package_list.ml
nix/: generic.nix  module.nix
test/: dune  ocaml_nix_updater.ml
